--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-Angular Intro 123
+<mat-toolbar color="primary">
+    <span>Angular Intro</span>
+</mat-toolbar>
 <button routerLink="/">Home</button>
 <button routerLink="/todo">Todo</button>
 <router-outlet></router-outlet>
