Styled the buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <span>Angular Intro</span>
+    <button mat-button routerLink="/">Home</button>
+    <button mat-button routerLink="/todo">Todo</button>
 </mat-toolbar>
-<button routerLink="/">Home</button>
-<button routerLink="/todo">Todo</button>
 <router-outlet></router-outlet>
