--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
     <span>Angular Intro</span>
+    <span class="spacer"></span>
     <button mat-button routerLink="/">Home</button>
     <button mat-button routerLink="/todo">Todo</button>
 </mat-toolbar>
