--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,9 @@ html, body {
 
 body {
     margin: 0;
+    background-color: #f0f0f0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+.spacer{
+    flex: 1 1 auto;
 }
