--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -2,5 +2,10 @@
 margin: 10px;
 ">
     <p>todo works!?!?!?!?!</p>
+    <mat-list role="list">
+        <mat-list-item role="listitem">Item 1</mat-list-item>
+        <mat-list-item role="listitem">Item 2</mat-list-item>
+        <mat-list-item role="listitem">Item 3</mat-list-item>
+    </mat-list>
 
 </mat-card>
