Embded data from code in our html

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,7 +1,7 @@
 <mat-card style="
 margin: 10px;
 ">
-    <p>todo works!?!?!?!?!</p>
+    <p>{{title}} {{6*7}}</p>
     <mat-list role="list">
         <mat-list-item role="listitem">Item 1</mat-list-item>
         <mat-list-item role="listitem">Item 2</mat-list-item>
