--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -4,7 +4,10 @@ margin: 10px;
     <p>{{title}} {{6*7}}</p>
     <mat-list role="list">
         <mat-list-item *ngFor="let task of tasks">
-            {{task.title}} - {{task.completed?"Done":"not done :("}}
+            <mat-slide-toggle [(ngModel)]="task.completed">
+                {{task.title}} - {{task.completed?"Done":"not done :("}}
+
+            </mat-slide-toggle>
         </mat-list-item>
 
     </mat-list>
