--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -22,5 +22,6 @@ margin: 10px;
         </mat-list-item>
 
     </mat-list>
-
+    <div>Total: {{tasks.length}}</div>
+    <div>Completed: {{getCompleted()}}</div>
 </mat-card>
